<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RSS Feed Reader</string>
    <string name="feeds">Feeds</string>
    <string name="sources">Sources</string>
    <string name="openInBrowser">Open in Browser</string>
    <string name="noDescriptionAvailable">No description available.</string>
    <string name="keySourcesPreferencesFile">tan.chesley.rssfeedreader.keySourcesPreferencesFile</string>
    <string name="action_settings">Settings</string>
    <string name="action_update">Update</string>
    <string name="action_import_export_sources">Import/Export sources</string>
    <string name="settingsTitle">Settings</string>
    <string name="pref_feedSortBy_title">Sort articles by: </string>
    <string name="pref_feedSortBy_default">3</string>
    <string name="pref_feedDateFormat_title">Article date format: </string>
    <string name="pref_feedDateFormat_default">1</string>
    <string name="pref_modify_sources">Modify sources</string>
    <string name="pref_articleNumberPicker_title">Max number of articles per feed</string>
    <string name="editSource">Edit source</string>
    <string name="addSourceTitle">Add new source</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="importFromFile">Import from file</string>
    <string name="exportToFile">Export to file</string>
    <string name="importFailedNoFileBrowser">This action requires a file browser to be installed; None were found.</string>
    <string name="noExternalStorageAccess">Could not access external storage.</string>
    <string name="errorOccurredDuringWrite">An error occurred while writing to the file.</string>
    <string name="errorOccurredDuringRead">An error occurred while reading the file.</string>
    <string name="successfulExportToFile">Successfully exported sources to file:\n</string>
    <string name="successfulImportFromFile">Successfully imported sources from file:\n</string>
    <string name="invalidFileFormat">File format not recognized.</string>
    <string name="pref_articleAgeLimitCheckBox_title">Limit the age of articles</string>
    <string name="pref_articleAgeLimit_title">Article age limit (days): </string>
    <string name="feed_settings">Feed settings</string>
    <string name="syncing_settings">Syncing settings</string>
    <string name="disabled">Disabled</string>
    <string name="enabled">Enabled</string>
    <string name="pref_useFullDescriptionCheckBox_title">Get full description</string>
    <string name="pref_useFullDescriptionCheckBox_summary">Try to get full description for the article</string>
    <string name="pref_syncTimeoutNumberPicker_title">Syncing timeout (seconds): </string>
    <string name="clearArticles">Clear articles</string>
    <string name="markAllRead">Mark all as read</string>
    <string name="goToNextUnread">Go to next unread</string>
    <string name="goToPreviousUnread">Go to previous unread</string>
    <string name="other_settings">Other settings</string>
    <string name="pref_enableBottomActionBar_title">Enable bottom action bar</string>
    <string name="noUnreadArticlesFound">No unread articles found.</string>
    <string name="pref_maxDatabaseSize_title">Max number of articles stored</string>
    <string name="storageSettings">Storage settings</string>
    <string name="validatingNewSource">Validating new source...</string>
    <string name="invalidSource">Source was invalid. Please verify that the source is a working RSS feed.</string>
    <string name="validSource">Source validation successful.</string>
    <string name="goToTop">Go to top</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_markAllRead">Mark all as read?</string>
    <string name="confirm_clearAllArticles">Clear all articles?</string>
    <string name="confirm_deleteSource">Delete source?</string>
    <string name="toggleLightsOffMode">Toggle lights off mode</string>
    <string name="takingYouTo">Taking you to:</string>
    <string name="pref_centerArticleViewDescriptionText_title">Center description in article view</string>
    <string name="lightsOffMode_disabled">Lights off mode disabled</string>
    <string name="lightsOffMode_enabled">Lights off mode enabled</string>
    <string name="autosyncInterval">Set autosync interval</string>
    <string name="stopAutosyncService">Stop autosync service</string>
    <string name="startAutosyncService">Start autosync service</string>
    <string name="serviceStopped">Service stopped</string>
    <string name="autosyncInBackground">Allow autosync in background</string>
    <string name="startingSyncService">Starting sync service</string>
    <string name="invalidIntervalUnderOneMinute">Invalid interval: The minimum interval is one minute.</string>
    <string name="syncing">Syncing</string>
    <string name="rssSyncService">RSS Autosync Service</string>
    <string name="serviceIsCurrentlyRunning">This service is currently running.</string>
    <string name="minutesToNextSync">Minutes to next sync:</string>
</resources>