<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_new"
        android:icon="@drawable/ic_action_new"
        android:showAsAction="always"
        android:title="@string/add"/>

    <item
        android:id="@+id/action_import_export_menu"
        android:icon="@drawable/ic_action_import_export"
        android:showAsAction="always"
        android:title="@string/action_import_export_sources">
        <menu>
        <item
            android:id="@+id/action_import"
            android:showAsAction="never"
            android:title="@string/importFromFile"/>

        <item
            android:id="@+id/action_export"
            android:showAsAction="never"
            android:title="@string/exportToFile"/>
        </menu>
    </item>
</menu>